--- a/style.css
+++ b/style.css
@@ -335,3 +335,88 @@ nav .menu a{
     line-height: 20px;
     color: #001931;
 }
+
+.early-access-section{
+    width: 1600px;
+    height: 506px;
+    padding: 2px 120px 120px 120px;
+    gap: 40px;
+    color: #FFFFFF;
+    /* border: 2px solid black; */
+}
+
+.early-access-box{
+    width: 1360px;
+    height: 384px;
+    border-radius: 12px;
+    padding: 80px 40px;
+    gap: 24px;
+    color: #F7F6F2;
+    /* border: 2px solid red; */
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.early-access-box .title{
+    width: 1280px;
+    height: 112px;
+    gap: 16px;
+}
+
+.title h2{
+    width: 1280px;
+    height: 48px;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 100%;
+    color: #001931;
+    text-align: center;
+}
+
+.title p{
+    width: 1280px;
+    height: 48px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #627382;
+}
+.get_early_access{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+.get_early_access .btn5{
+    border: none;
+    /* box-shadow: 0px 20px 200px #000000; */
+    width: 194px;
+    height: 52px;
+    border-radius: 4px;
+    padding: 12px 16px;
+    gap: 10px;
+    
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 100%;
+    color: #FFFFFF;
+    background-color: #30B868;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.get_early_access p{
+    width: 1280px;
+    height: 20px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #627382;
+}
