--- a/style.css
+++ b/style.css
@@ -420,3 +420,64 @@ nav .menu a{
     text-align: center;
     color: #627382;
 }
+
+.footer-section{
+    /* width: 1600px; */
+    height: 348px;
+    border-top: 1px;
+    padding: 120px 120px 30px 120px;
+    gap: 80px;
+    background-color: #001931;
+}
+.logo-part{
+    display: flex;
+    justify-content:space-between;
+    margin-bottom: 80px;
+}
+.logo-part img{
+    width: 139px;
+    height: 60px;
+}
+.social-logo{
+    width: 220px;
+    height: 64px;
+}
+.social-logo p{
+    width: 113px;
+    height: 28px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    align-items: center;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+.links{
+    display: flex;
+}
+.social-logo ul li{
+    list-style: none;
+}
+
+.social-logo ul li a img{
+    width: 20px;
+    height: 20px;
+    margin-right: 16px;
+}
+
+.copyright{
+    width: 1360px;
+    height: 54px;
+    gap: 30px;
+}
+
+.copyright p{
+    margin-top: 30px;
+    width: 1360px;
+    height: 24px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #FAFAFA;
+}
